deployments/null-cloud/base/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eddington-api
spec:
  selector:
    matchLabels:
      app: eddington-api
  template:
    metadata:
      labels:
        app: eddington-api
    spec:
      containers: 
      - name: eddington-api
        image: nullchannel/eddington-api:8527d041ee72ee474b55819f11a70262053ec514
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
