deployments/null-cloud/base/api/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eddington-api
spec:
  selector:
    app: eddington-api
  ports:
  - port: 80
    targetPort: 8080
